<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph">

    <fragment android:id="@+id/routing_page"
        android:name="com.example.viewsystem.core.presentation.routing.RoutingFragment"
        android:label="Routing Page"
        tools:layout="@layout/fragment_routing" />

    <fragment android:id="@+id/flipping_item_page"
        android:name="com.example.viewsystem.feature.flippingitem.FlippingItemFragment"
        android:label="@string/title_flipping_recyclerview_item"
        tools:layout="@layout/fragment_flipping_item" />

    <fragment android:id="@+id/lego_text_page"
        android:name="com.example.viewsystem.feature.legotext.LegoTextFragment"
        android:label="@string/title_lego_text_blocks"
        tools:layout="@layout/fragment_lego_text"/>

    <fragment android:id="@+id/calendar_view_page"
        android:name="com.example.viewsystem.feature.calendarview.CalendarViewFragment"
        android:label="@string/title_calendar_view"
        tools:layout="@layout/fragment_calendar_view"/>

    <fragment android:id="@+id/input_sheet_page"
        android:name="com.example.viewsystem.feature.inputsheet.InputSheetFragment"
        android:label="@string/title_input_sheet"
        tools:layout="@layout/fragment_input_sheet" />

    <fragment android:id="@+id/list_motions_page"
        android:name="com.example.viewsystem.feature.listmotions.ListMotionsFragment"
        android:label="@string/title_list_motions"
        tools:layout="@layout/fragment_list_motions" />

</navigation>